Ensure that text is always visible on the page
Previously, browser window widths around 900 pixels would end up with
the rightmost text outside the visible browser area.

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -28,6 +28,7 @@
   flex: 1;
   order: 2;
   max-width: $default-max-width;
+  overflow: auto;
 }
 
 .guideListWrapper {
